--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <meta name="description" content="Your house agency">
 
     <title>Amazing House</title>
-
+ <style> 
+ em {
+ color:whitesmoke;
+ font-style: normal;
+ }
+</style>
 </head>
 <body>
-   <p>Do you found your next home by us? <em>Probably!</em></p> 
 
 </body>
 </html>
 <!Doctype html>
 <html>
 <head>
-<title> Amazing House </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -25,7 +28,7 @@
 <label for="nav-toggle" class="nav-toggle-label">
 <i class="fa-solid fa bars"></i>
 </label>
-
+<i>Do you found your next home by us?<b>Probably!</b></i>
 <nav>
 <ul id="menu"> 
 <li>
